created the main files

--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
               <a class="nav-link" href="burger.html">Burgers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="pie.html">Pie</a>
+              <a class="nav-link" href="chickenNoodleSoup.html">Chicken Noodle Soup</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Other food</a>
+              <a class="nav-link" href="toast.html">Toast</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="cereal.html">Cereal</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="about.html">About</a>
-              </li>
+            </li>
           </ul>
         </div>
       </nav>
