getting the grid live

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-  <p> "asjdkajsdnkj</p>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Menu</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +37,21 @@
         </div>
       </nav>
 
+      <h2>Click on a picture to see it's recipe!</h2>
 
+      <section class="portfolio">
+        <div class="image">
+          <img src="images/a.jpg" />
+        </div>
+        <div class="image">
+          <img src="images/b.jpg" />
+        </div>
+        <div class="image">
+          <img src="images/c.jpg" />
+        </div>
+        <div class="image">
+            <img src="images/e.jpg" />
+        </div>
 
 
 
