--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
 
       <section class="portfolio">
         <div class="image">
-          <img src="images/a.jpg" />
+          <img src="images/burger.jpg" />
         </div>
         <div class="image">
-          <img src="images/b.jpg" />
+          <img src="images/chickenNoodleSoup.jpg" />
         </div>
         <div class="image">
-          <img src="images/c.jpg" />
+          <img src="images/toast.jpg" />
         </div>
         <div class="image">
-            <img src="images/e.jpg" />
+            <img src="images/cereal.jpg" />
         </div>
 
 
