--- a/index.html
+++ b/index.html
@@ -41,16 +41,24 @@
 
       <section class="portfolio">
         <div class="image">
-          <img src="images/burger.jpg" />
+          <a href="burger.html">
+            <img src="images/burger.jpg" />
+          </a>
         </div>
         <div class="image">
-          <img src="images/chickenNoodleSoup.jpg" />
+          <a href="chickenNoodleSoup.html">
+            <img src="images/chickenNoodleSoup.jpg" />
+          </a>
         </div>
         <div class="image">
-          <img src="images/toast.jpg" />
+          <a href="toast.html">
+            <img src="images/toast.jpg" />
+          </a>
         </div>
         <div class="image">
+          <a href="cereal.html">
             <img src="images/cereal.jpg" />
+          </a>
         </div>
 
 
