--- a/burger.html
+++ b/burger.html
@@ -37,11 +37,19 @@
         </div>
       </nav>
     <h2>Burgers</h2>
-    <p>Follow these directions to make a </p>
-
-
-
-
+    <p>Follow these directions to make a Burger!</p>
+    <ol>
+        <li>Locate a hamburger meat. Ideally at a store.</li>
+        <li>Cook burger meat to the desired level.</li>
+        <li>Split hamburger bun into its two halves.</li>
+        <li>Brag about your new grill.</li>
+        <li>Place hamburger meat (delicately) onto the bottom bun. Under no circumstances place it on the top.</li>
+        <li>Add lettuce or any other greens to make you feel better about your carnivorous choices.</li>
+        <li>Add any sauces such as kethchup or mustard.</li>
+        <li>Combine the two havles of your burger.</li>
+        <li>Celebrate by eating your burger.</li>
+    </ol>
+    <br><br><br>
   <footer>
     
     <a href="https://github.com/atcotton/creative1">Github</a>
