toast! with a burger tweak

--- a/burger.html
+++ b/burger.html
@@ -36,7 +36,7 @@
           </ul>
         </div>
       </nav>
-    <h2>Burgers</h2>
+    <h2>How to Make a Burger</h2>
     <p>Follow these directions to make a Burger!</p>
     <ol>
         <li>Locate a hamburger meat. Ideally at a store.</li>
