--- a/toast.html
+++ b/toast.html
@@ -36,7 +36,20 @@
           </ul>
         </div>
       </nav>
-
+      <h2>How to Make Toast</h2>
+      <ol>
+          <li>Locate bread.</li>
+          <li>locate toaster.</li>
+          <li>Plug toaster in.</li>
+          <li>Insert bread in toaster and press start.</li>
+          <li>Dispose of charred remains of bread.</li>
+          <li>Turn down the power to the toaster.</li>
+          <li>Insert bread in toaster and press start.</li>
+          <li>Don't panic when bread pops up.</li>
+          <li>Remove properly toasted bread.</li>
+          <li>Apply butter to one side of the toast.</li>
+          <li>Enjoy your toast.</li>
+      </ol>
 
 
 
