added some the about

--- a/about.html
+++ b/about.html
@@ -37,6 +37,8 @@
         </div>
       </nav>
 
+      <h2>About</h2>
+      <p>This page was created as a group project for a web development course. All images were pulled from Creative Commons.</p>
 
 
 
