--- a/cereal.html
+++ b/cereal.html
@@ -37,7 +37,33 @@
         </div>
       </nav>
 
-
+  <h2><center>How to Make a Bowl of Cereal</center></h2>
+    <br>
+    <h3><center>Step 1: Gather Your Supplies.</center></h3>
+    <p>The first step is to get the supplies needed for a bowl of cereal:  
+    <ol>
+      <li>Bowl</li>
+      <li>Spoon</li>
+      <li>Milk</li>
+      <li>A box of cereal</li>
+    </ol>
+    </p>
+    <br>
+    <h3><center>Step 2: Get Bowl and Add Cereal</center></h3>
+    <p>First get your bowl and place it on the counter top or table. Then add cereal.</p>
+    <br>
+    <h3><center>Step 3: Add Milk.</center></h3>
+    <p>Now it is time to add milk!   
+    <ol>
+      <li>Get milk</li>
+      <li>Remove cap</li>
+      <li>Pour onto cereal</li>
+      <li>put cap back on</li>
+    </ol>
+    </p>
+    <br>
+    <h3><center>Step 4: Add Spoon and Enjoy!</center></h3>
+    <p>Finally, add your spoon And enjoy your bowl of cereal!</p>
 
 
 
