--- a/chickenNoodleSoup.html
+++ b/chickenNoodleSoup.html
@@ -38,14 +38,36 @@
       </nav>
 
 
-
-
-
-  <footer>
+    <h2><center>Chicken Noodle Soup</center></h2>
+    <p>This classic chicken noodle soup is simple to make in less than an hour with ingredients you already have in your pantry. It's loaded with chicken & herbs.</p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>2 tbsp butter</li>
+      <li>1 cup sliced carrots
+      <li>1 cup sliced celery</li>
+      <li>1 white onion diced</li>
+      <li>1 tbsp freshly grated ginger</li>
+      <li>1 tbsp minced garlic</li>
+      <li>8 cups chicken broth</li>
+      <li>1/2 tsp dried thyme</li>
+      <li>1/2 tsp dried oregano</li>
+      <li>Salt and pepper to taste</li>
+      <li>12 ounces egg noodles</li>
+      <li>1.5 cups diced cooked chicken</li>
+      <li>3 tbsp freshly chopped parsely</li>
+    </ul>
+    <h3>Instructions</h3>
+    <ol>
+      <li>In a large stockpot, heat butter on medium high heat. Add carrots, celery, onions and saute everything until the veggies become slightly tender. Add ginger, garlic and saute them for 1-2 minutes, making sure not to burn them.</li>
+      <li>Add broth, thyme, oregano, salt, pepper and bring everything to a boil. Let simmer 5 minutes.</li>
+      <li>Add chicken and egg noodles and let simmer for about 10 minutes or until the noodles become soft. Note: If you like more broth in your soup, you can add some more water or broth and cook for an additional 4-5 minutes.</li>
+      <li>Check the flavor to see if you need to add more herbs or salt and pepper. Stir in parsley and serve hot. </li>
+    </ol>
     
+    
+  <footer>
     <a href="https://github.com/atcotton/creative1">Github</a>
   </footer>
-
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
